--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1281,7 +1281,7 @@ audio {
 	display: none;
 }
 .message p {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	font-size: 30px;
 	text-transform: uppercase;
 	color: #C4515C;
